UI, Table blabla

--- a/manage/src/theme/globalSelectors.css
+++ b/manage/src/theme/globalSelectors.css
@@ -15,3 +15,11 @@ html {
     font-family: 'Quicksand';
     list-style: none;
 }
+
+.caption {
+    font-size: 12px;
+}
+
+.ant-space {
+    width: 100%;
+}
