--- a/manage/src/theme/vars.less
+++ b/manage/src/theme/vars.less
@@ -1,6 +1,11 @@
 @import "~antd/lib/style/themes/default.less";
 @border-radius-base: 5px;
 
+.main-header {
+    background-color: @component-background;
+    box-shadow: @shadow-1-down;
+}
+
 .box-component {
     background-color: @component-background;
     color: @text-color;
