laptop sap hu, push keo mat :D

--- a/manage/src/theme/globalSelectors.css
+++ b/manage/src/theme/globalSelectors.css
@@ -28,3 +28,7 @@ html {
     width: 100%;
     height: 100%;
 }
+
+.ant-collapse-no-header-padding .ant-collapse-header {
+    padding: 0 !important;
+}
