--- a/manage/src/theme/vars.less
+++ b/manage/src/theme/vars.less
@@ -12,3 +12,13 @@
     border-radius: @border-radius-base;
     box-shadow: @shadow-1-down;
 }
+
+.box-primary {
+    background-color: @primary-color;
+    color: @white;
+}
+
+.box-default {
+    background-color: @body-background;
+    color: @text-color;
+}
